<resources>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="flashcard">flashcard</string>
    <string name="flashcard_title_text">Flashcard Title</string>
    <string name="title_home">HOME</string>
    <string name="title_directories">DIRECTORIES</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="directory_title">Directory Title</string>
    <string name="close_button">X</string>
    <string name="save_text">Save</string>
    <string name="flashcard_description_text">Description</string>
    <string name="select_image">Select Image</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete</string>
    <string name="review">Review</string>
    <string name="directory_title_text">Directory Title</string>
    <string name="directory_description_text">Directory Description</string>
    <string name="flashcardImage">Flashcard Image</string>
    <string name="error_loading_image">Can\'t load the image.</string>
    <string name="image_chooser">Choose an image</string>
    <string name="quiz">QUIZ</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="take_a_quiz">TAKE A QUIZ</string>
    <string name="logs">LOGS</string>
    <string name="home_screen_no_flashcard">NO FLASHCARD YET.\nSELECT A DIRECTORY AND CREATE FLASHCARDS.</string>
    <string name="home_screen_no_quiz">LATEST QUIZ NOT FOUND.\nCHECK THE QUIZ TAB.</string>
    <string name="no_flashcard_yet">NO FLASHCARD YET.\nTAP + TO ADD ONE.</string>
    <string name="no_log">NO LOGS YET.</string>
    <string name="correct_answer">Correct answer</string>
    <string name="correct_answers">Correct answers %1$s</string>
    <string name="your_answer">Your answer</string>
    <string name="question_no">Question No</string>
    <string name="tap_to_add_image">TAP TO ADD IMAGE</string>
    <string name="latest_cards_title">Latest cards</string>
    <string name="latest_quiz_results_title">Latest quiz results</string>
    <string name="splash_image">Splash Image</string>
    <string name="repeatcard">REPEATCARD</string>
    <string name="card_image">CardImage</string>
    <string name="min_card_for_quiz">You should have at least 4 cards \nwith a title and image.</string>
    <string name="flashcard_invalid_error">Flashcards need to have a title and an image</string>
    <string name="title">Title</string>

    <string-array name="onboardingTexts">
        <item>Create a directory to add flashcards. \nNo worries, you already have a default directory.</item>
        <item>In a directory, create your flashcards.</item>
        <item>Review flashcards of a specific directory.</item>
        <item>Do you feel prepared? \nTake a quiz, and see the results.</item>
        <item>See the logs screen to track your activity.</item>
    </string-array>
    <string name="title_designsystem">Design System</string>
</resources>
