<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.ilker.repeatcard.ui.home.HomeScreen"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_navigation_home_to_navigation_directories"
            app:destination="@id/navigation_directories"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_quiz"
            app:destination="@id/navigation_quiz"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="it.ilker.repeatcard.ui.quiz.QuizFragment"
        android:label="@string/quiz"
        tools:layout="@layout/quiz_fragment">
    </fragment>

    <fragment
        android:id="@+id/navigation_directories"
        android:name="it.ilker.repeatcard.ui.directories.DirectoriesFragment"
        android:label="@string/title_directories"
        tools:layout="@layout/directories_fragment"/>

</navigation>
