<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.flashcarddetail.FlashcardDetailActivity">

    <ImageView
        android:id="@+id/flashcard_detail_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/flashcard_detail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewFlashcardTitleLabel"
        style="@style/review_text_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/flashcard_title_text"
        app:layout_constraintBottom_toTopOf="@+id/flashcard_detail_description"
        app:layout_constraintStart_toStartOf="@+id/flashcard_detail_imageView"
        app:layout_constraintTop_toTopOf="@+id/flashcard_detail_title" />

    <TextView
        android:id="@+id/flashcard_detail_title"
        style="@style/review_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/flashcard_detail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reviewFlashcardTitleLabel" />

    <TextView
        android:id="@+id/reviewFlashcardDescriptionLabel"
        style="@style/review_text_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/flashcard_description_text"
        app:layout_constraintBottom_toBottomOf="@+id/flashcard_detail_description"
        app:layout_constraintStart_toStartOf="@+id/reviewFlashcardTitleLabel"
        app:layout_constraintTop_toTopOf="@+id/flashcard_detail_description" />

    <TextView
        android:id="@+id/flashcard_detail_description"
        style="@style/review_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_close_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/flashcard_detail_title" />

    <Button
        android:id="@+id/button_close_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/close_button"
        android:backgroundTint="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
